fix(footer) : gap between footer content and copyright

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -10,6 +10,10 @@ body {
   font-family: 'Poppins', sans-serif !important;
 }
 
+main {
+  overflow-x: hidden !important;
+}
+
 /* QuizAlert.css */
 .marquee {
   width: 100%;
@@ -33,4 +37,10 @@ body {
 @keyframes marquee {
   0% { transform: translateX(100%); }
   100% { transform: translateX(-100%); }
+}
+
+@media only screen and (max-width: 640px) {
+  .marquee {
+    display: none;
+  }
 }
